fix critical keyboard layout bug

--- a/style.css
+++ b/style.css
@@ -55,5 +55,5 @@
     margin: 0.3vmin;
     justify-content: center;
     align-items: center;
-    font-size: 4vmin;
+    font-size: 3vw;
 }
